--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "typesafe-i18n": "typesafe-i18n"
+    "typesafe-i18n": "typesafe-i18n",
+    "start:dev": "nodemon build/index.js"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
@@ -24,6 +25,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "node-sass": "^7.0.1",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
