--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./
       target: production
     volumes:
-      - .:/
+      - .:/src
     command: node build/index.js
     ports:
       - "3000:3000"
