--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "typesafe-i18n": "typesafe-i18n",
-    "start:dev": "nodemon build/index.js"
+    "typesafe-i18n": "typesafe-i18n"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-node": "^1.0.0-next.67",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.0-next.260",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
