--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typesafe-i18n": "typesafe-i18n"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-auto": "^1.0.0-next.17",
     "@sveltejs/adapter-node": "^1.0.0-next.67",
     "@sveltejs/kit": "^1.0.0-next.260",
     "@types/cookie": "^0.4.1",
@@ -22,27 +22,27 @@
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "eslint-plugin-svelte3": "^3.4.0",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
+    "prettier-plugin-svelte": "^2.6.0",
     "sass": "^1.49.7",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.4",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.2",
+    "svelte-preprocess": "^4.10.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.5"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.5.0",
+    "@fontsource/fira-mono": "^4.5.2",
     "@lukeed/uuid": "^2.0.0",
     "bootstrap": "^5.1.3",
-    "cookie": "^0.4.1",
-    "sveltestrap": "^5.7.0",
-    "typesafe-i18n": "^2.57.5"
+    "cookie": "^0.4.2",
+    "sveltestrap": "^5.8.3",
+    "typesafe-i18n": "^2.60.2"
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
