--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
+    "object-hash": "^3.0.0",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.6.0",
     "sass": "^1.49.7",
@@ -41,7 +42,7 @@
     "@lukeed/uuid": "^2.0.0",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.2",
-    "sveltestrap": "^5.8.3",
+    "sveltestrap": "^5.9.0",
     "typesafe-i18n": "^2.60.2"
   },
   "optionalDependencies": {
