--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "npm-run-all --parallel sveltekit typesafe-i18n",
-    "sveltekit": "svelte-kit dev",
+    "sveltekit": "vite dev",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^1.0.0-next.17",
     "@sveltejs/adapter-node": "^1.0.0-next.67",
-    "@sveltejs/kit": "^1.0.0-next.260",
+    "@sveltejs/kit": "^1.15.0",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
@@ -30,11 +30,11 @@
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.6.0",
     "sass": "^1.49.7",
-    "svelte": "^3.46.4",
+    "svelte": "^3.55.1",
     "svelte-check": "^2.4.2",
     "svelte-preprocess": "^4.10.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3"
   },
   "type": "module",
   "dependencies": {
@@ -42,7 +42,7 @@
     "@lukeed/uuid": "^2.0.0",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.2",
-    "sveltestrap": "^5.9.0",
+    "sveltestrap": "^5.10.0",
     "typesafe-i18n": "^2.60.2"
   },
   "optionalDependencies": {
