--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "medecinelibre.com-sveltekit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "npm-run-all --parallel sveltekit typesafe-i18n",
     "sveltekit": "vite dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -15,14 +14,14 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^1.0.0-next.17",
-    "@sveltejs/adapter-node": "^1.0.0-next.67",
+    "@sveltejs/adapter-node": "^1.1.4",
     "@sveltejs/kit": "^1.15.0",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.4.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
@@ -31,8 +30,8 @@
     "prettier-plugin-svelte": "^2.6.0",
     "sass": "^1.49.7",
     "svelte": "^3.55.1",
-    "svelte-check": "^2.4.2",
-    "svelte-preprocess": "^4.10.2",
+    "svelte-check": "^3.0.2",
+    "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3"
   },
